--- a/CTFd/templates/admin/chals.html
+++ b/CTFd/templates/admin/chals.html
@@ -146,10 +146,18 @@
                             </label>
                         </div>
 
+                        <div class="checkbox">
+                            <label>
+                                <input class="instanced" name="instanced" type="checkbox">
+                                Multiple instances 
+                            </label>
+                        </div>
+
                         <div class="form-group">
                             <a href="#" data-toggle="modal" data-target="#update-tags" class="btn btn-primary">Tags</a>
                             <a href="#" data-toggle="modal" data-target="#update-files" class="btn btn-primary">Files</a>
                             <a href="#" data-toggle="modal" data-target="#update-keys" class="btn btn-primary">Keys</a>
+                            <a href="#" data-toggle="modal" data-target="#update-instances" class="btn btn-primary">Instances</a>
                             <a href="#" data-toggle="modal" data-target="#delete-chal" class="btn btn-danger">Delete</a>
                         </div>
                         <input type="hidden" value="{{ nonce }}" name="nonce" id="nonce">
@@ -199,6 +207,28 @@
                         <div class="row">
                             <input type="hidden" value="{{ nonce }}" name="nonce" id="nonce">
                             <button id="submit-keys" class="btn btn-theme btn-outlined">Update</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div id="update-instances" class="modal fade" tabindex="-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header text-center">
+                    <h3>Instances</h3>
+                </div>
+                <div class="modal-body">
+                    <form method="POST" action="" style="text-align:center">
+                        <a href="#" id="create-instance" class="btn btn-primary" style="margin-bottom:15px;">New Instance</a>
+                        <input name='nonce' type='hidden' value="{{ nonce }}">
+                        <input id="instances-chal" name='chal' type='hidden'>
+                        <div id="current-instances" class="row"></div>
+                        <div class="row">
+                            <input type="hidden" value="{{ nonce }}" name="nonce" id="nonce">
+                            <button id="submit-instances" class="btn btn-theme btn-outlined">Update</button>
                         </div>
                     </form>
                 </div>
