Added changes to edit chal file UI

--- a/CTFd/templates/admin/chals.html
+++ b/CTFd/templates/admin/chals.html
@@ -148,7 +148,7 @@
 
                         <div class="checkbox">
                             <label>
-                                <input class="instanced" name="instanced" type="checkbox">
+                                <input class="chal-instanced" name="instanced" type="checkbox">
                                 Multiple instances 
                             </label>
                         </div>
@@ -157,7 +157,7 @@
                             <a href="#" data-toggle="modal" data-target="#update-tags" class="btn btn-primary">Tags</a>
                             <a href="#" data-toggle="modal" data-target="#update-files" class="btn btn-primary">Files</a>
                             <a href="#" data-toggle="modal" data-target="#update-keys" class="btn btn-primary">Keys</a>
-                            <a href="#" data-toggle="modal" data-target="#update-instances" class="btn btn-primary">Instances</a>
+                            <a href="#" data-toggle="modal" data-target="#update-instances" id="instances-btn" class="btn btn-primary">Instances</a>
                             <a href="#" data-toggle="modal" data-target="#delete-chal" class="btn btn-danger">Delete</a>
                         </div>
                         <input type="hidden" value="{{ nonce }}" name="nonce" id="nonce">
