POC of Embedded Shell
This is a quick Proof of Concept for an embedded shell in the
browser using shellinabox. To use startup CTFd and login as a
regular user and navigate to the shell tab. If it is not working
make sure you have shellinabox installed and that it is running
on port 4200

--- a/CTFd/templates/original/base.html
+++ b/CTFd/templates/original/base.html
@@ -38,7 +38,8 @@
             <li><a href="{{ request.script_root }}/teams">Teams</a></li>
             <li><a href="{{ request.script_root }}/scoreboard">Scoreboard</a></li>
             <li><a href="{{ request.script_root }}/challenges">Challenges</a></li>
-          </ul>
+            <li><a href="{{ request.script_root }}/shell">Shell</a></li>  
+	</ul>
           <ul class="nav navbar-nav navbar-right">
           {% if username is defined %}
             {% if admin %}
