In process of integrating Logo into pages - Completed toplefthand integration

--- a/CTFd/templates/TAMUctf/page.html
+++ b/CTFd/templates/TAMUctf/page.html
@@ -32,7 +32,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a href="{{ request.script_root }}/" class="navbar-brand">{{ ctf_name() }}</a>
+                <a href="{{ request.script_root }}/" class="navbar-brand"><img src="{{ request.script_root }}/static/{{ ctf_theme() }}/img/{{ ctf_name() }}.png" height="185%" style="position: relative; top: -0.35em;"></a>
             </div>
             <div class="navbar-collapse collapse" aria-expanded="false" style="height: 0px">
                 <ul class="nav navbar-nav">
