Design Finished - (Font, Color Scheme, etc.) - possible work needed before release

--- a/CTFd/templates/TAMUctf/base.html
+++ b/CTFd/templates/TAMUctf/base.html
@@ -9,8 +9,8 @@
 	<link rel="shortcut icon" href="{{ request.script_root }}/static/{{ ctf_theme() }}/img/favicon.png" type="image/x-icon" />
     <link rel="stylesheet" href="{{ request.script_root }}/static/{{ ctf_theme() }}/css/vendor/bootstrap.min.css">
     <link rel="stylesheet" href="{{ request.script_root }}/static/{{ ctf_theme() }}/css/vendor/font-awesome/css/font-awesome.min.css" />
-    <link href='{{ request.script_root }}/static/{{ ctf_theme() }}/css/vendor/lato.css' rel='stylesheet' type='text/css'>
-    <link href='{{ request.script_root }}/static/{{ ctf_theme() }}/css/vendor/raleway.css' rel='stylesheet' type='text/css'>
+    <link href='{{ request.script_root }}/static/{{ ctf_theme() }}/css/vendor/OpenSans.css' rel='stylesheet' type='text/css'>
+    <link href='{{ request.script_root }}/static/{{ ctf_theme() }}/css/vendor/HACKED.css' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="{{ request.script_root }}/static/{{ ctf_theme() }}/css/style.css">
     <link rel="stylesheet" type="text/css" href="{{ request.script_root }}/static/user.css">
     {% block stylesheets %}{% endblock %}
@@ -18,11 +18,22 @@
     <script type="text/javascript">
         var script_root = "{{ request.script_root }}";
     </script>
+    <style> 
+    li {
+       font-family: HACKED;
+       font-size: 18px;
+       letter-spacing: 0.2rem;
+    }
+    td {
+       font-family: "Open Sans";
+       font-size: 18px;
+    }
+    </style>
 </head>
 <body>
   <div class="body-container">
     <div class="navbar navbar-inverse home">
-      <div class="container">
+      <div class="container" style="font-family: HACKED;">
         <div class="navbar-header">
           <button class="navbar-toggle" data-target=".navbar-collapse" data-toggle="collapse" type="button">
             <span class="icon-bar"></span>
