--- a/CTFd/templates/TAMUctf/page.html
+++ b/CTFd/templates/TAMUctf/page.html
@@ -10,9 +10,9 @@
     <link rel="stylesheet" href="{{ request.script_root }}/static/{{ ctf_theme() }}/css/vendor/bootstrap.min.css">
     <link rel="stylesheet"
           href="{{ request.script_root }}/static/{{ ctf_theme() }}/css/vendor/font-awesome/css/font-awesome.min.css"/>
-    <link href='{{ request.script_root }}/static/{{ ctf_theme() }}/css/vendor/lato.css' rel='stylesheet'
+    <link href='{{ request.script_root }}/static/{{ ctf_theme() }}/css/vendor/OpenSans.css' rel='stylesheet'
           type='text/css'>
-    <link href='{{ request.script_root }}/static/{{ ctf_theme() }}/css/vendor/raleway.css' rel='stylesheet'
+    <link href='{{ request.script_root }}/static/{{ ctf_theme() }}/css/vendor/HACKED.css' rel='stylesheet'
           type='text/css'>
     <link rel="stylesheet" href="{{ request.script_root }}/static/{{ ctf_theme() }}/css/style.css">
     <link rel="stylesheet" type="text/css" href="{{ request.script_root }}/static/user.css">
@@ -21,6 +21,13 @@
     <script type="text/javascript">
         var script_root = "{{ request.script_root }}";
     </script>
+    <style> 
+    li {
+       font-family: HACKED;
+       font-size: 18px;
+       letter-spacing: 0.2rem;
+    }
+    </style>
 </head>
 <body>
 <div class="body-container">
