--- a/CTFd/static/TAMUctf/css/style.css
+++ b/CTFd/static/TAMUctf/css/style.css
@@ -1,11 +1,11 @@
 
 html, body, .container {
     height: 100% !important;
-    font-family: 'Lato', sans-serif;
+    font-family: 'Open Sans', sans-serif;
 }
 
 h1, h2 {
-    font-family: 'Raleway', sans-serif;
+    font-family: 'HACKED', sans-serif;
     font-weight: 500;
     letter-spacing: 2px;
 }
@@ -170,7 +170,7 @@ table{
 }
 
 .solved-challenge {
-    background-color: #8EDC9D !important;
+    background-color: #87CC8A !important;
 }
 
 .panel-theme {
