--- a/CTFd/templates/admin/chals.html
+++ b/CTFd/templates/admin/chals.html
@@ -150,6 +150,7 @@
                             <a href="#" data-toggle="modal" data-target="#update-tags" class="btn btn-primary">Tags</a>
                             <a href="#" data-toggle="modal" data-target="#update-files" class="btn btn-primary">Files</a>
                             <a href="#" data-toggle="modal" data-target="#update-keys" class="btn btn-primary">Keys</a>
+                            <a href="#" data-toggle="modal" data-target="#update-discoveryList" class="btn btn-primary">Discovery</a>
                             <a href="#" data-toggle="modal" data-target="#delete-chal" class="btn btn-danger">Delete</a>
                         </div>
                         <input type="hidden" value="{{ nonce }}" name="nonce" id="nonce">
@@ -179,6 +180,35 @@
                             <button class="btn btn-danger" id="delete-user" type="submit">Delete</button>
                         </div>
                     </form>
+                </div>
+            </div>
+        </div>
+    </div>
+    
+        <div id="update-discoveryList" class="modal fade" tabindex="-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header text-center">
+                    <h3>Discovery</h3>
+                </div>
+                <div class="modal-body">
+                    <div class="form-group">
+                        <label for="discovert-insert">Value</label>
+                        <input max-length="80" type="text" class="form-control discovery-insert" name="discovery-insert" placeholder="Type a problem to be solved and press Enter">
+                    </div>
+                    <input name='nonce' type='hidden' value="{{ nonce }}">
+                    <input id="discoveryList-chal" name='chal' type='hidden'>
+
+                    <div id="current-discoveryList">
+
+                    </div>
+                    <br/>
+                    <div id="chal-discoveryList">
+                    </div>
+                    <div class="row" style="text-align:center;margin-top:20px">
+                        <input type="hidden" value="{{ nonce }}" name="nonce" id="nonce">
+                        <button class="btn btn-theme btn-outlined" id="submit-discoveryList">Update</button>
+                    </div>
                 </div>
             </div>
         </div>
