Added some limited implementation of the hints (not visible in webpage yet) and the Admin GUI dropdown of the challenge (not working yet)

--- a/CTFd/templates/TAMUctf/chals.html
+++ b/CTFd/templates/TAMUctf/chals.html
@@ -117,6 +117,7 @@
                             <h4 class="chal-value"></h4>
                             <div class="chal-tags"></div>
                             <p class="chal-desc"></p>
+                            <p class="chal-hint"></p>
                             <div class="chal-files file-row row">
                             </div>
 
