--- a/CTFd/static/admin/css/style.css
+++ b/CTFd/static/admin/css/style.css
@@ -479,3 +479,49 @@ table{
 .remove-key{
     float:right;
 }
+
+/* For Discovery */
+
+.dis {
+  width: 8em;
+  line-height: 2em;
+  width: 10%;
+  display:inline-block !important;
+}
+
+li.dis {
+  display: list-item;
+  width: 100%;
+  height: 2em;
+  border: 1px solid #ccc;
+  border-top-width: 0;
+  background-color: rgba(158, 110, 110, 0.6);
+  text-align: center;
+}
+
+li.unselected {
+  display: none;
+  background-color: #fff;
+}
+
+ul.dis:hover li.unselected {
+  background-color: rgba(255, 200, 200, 0.1);
+}
+
+ul.dis:hover li.dis,
+ul.dis:hover li.unselected {
+  display: list-item;
+}
+
+ul.dis:hover li.dis {
+  background-color: rgba(158, 110, 110, 0.6);
+}
+
+ul.dis li:hover,
+ul.dis li.unselected:hover {
+  background-color: rgba(100, 0, 0, 0.2);
+  border-color: rgba(135, 204, 138, 0.8);
+  border-radius: 5px;
+  border-width: 1px;
+}
+
