--- a/CTFd/templates/admin/chals.html
+++ b/CTFd/templates/admin/chals.html
@@ -55,7 +55,10 @@
                             <div role="tabpanel" class="tab-pane content" id="new-desc-preview">
                             </div>
                         </div>
-
+                        <div class="form-group">
+                            <label for="hint">Hint (Optional)</label>
+                            <input type="text" class="form-control" name="hint" placeholder="Enter a helpful starting path for solving this problem.">
+                        </div>
                         <div class="form-group">
                             <label for="value">Value</label>
                             <input type="number" class="form-control" name="value" placeholder="Enter value" required>
@@ -132,7 +135,10 @@
                             <div role="tabpanel" class="tab-pane content" id="desc-preview">
                             </div>
                         </div>
-
+                        <div class="form-group">
+                            <label for="hint">Hint (Optional)</label>
+                            <input type="text" class="form-control chal-hint" name="hint" placeholder="Enter a helpful starting path for solving this problem.">
+                        </div>
                         <div class="form-group">
                             <label for="value">Value</label>
                             <input type="number" class="form-control chal-value" name="value" placeholder="Enter value" required>
@@ -155,7 +161,7 @@
                         </div>
                         <input type="hidden" value="{{ nonce }}" name="nonce" id="nonce">
                         <div style="text-align:center">
-                            <button class="btn btn-theme btn-outlined update-challenge-submit" type="submit">Update</button>
+                            <button class="btn btn-theme btn-outlined update-challenge-submit submit-hint" type="submit">Update</button>
                         </div>
                     </form>
                 </div>
@@ -195,16 +201,18 @@
                     <div class="form-group">
                         <label for="discovert-insert">Value</label>
                         <input max-length="80" type="text" class="form-control discovery-insert" name="discovery-insert" placeholder="Type a problem to be solved and press Enter">
+                        <br/>
+                        <a href="#" id="create-discovery" class="btn btn-primary" style="margin-bottom:15px;">New Discovery</a>                      
                     </div>
+                </div>
+                    
                     <input name='nonce' type='hidden' value="{{ nonce }}">
                     <input id="discoveryList-chal" name='chal' type='hidden'>
-
-                    <div id="current-discoveryList">
-
-                    </div>
+                    <div id="current-discoveryList"></div>
                     <br/>
                     <div id="chal-discoveryList">
                     </div>
+                    <br/>
                     <div class="row" style="text-align:center;margin-top:20px">
                         <input type="hidden" value="{{ nonce }}" name="nonce" id="nonce">
                         <button class="btn btn-theme btn-outlined" id="submit-discoveryList">Update</button>
