Added Admin's GUI - Improved (Still need slight modification, but it works)

--- a/CTFd/templates/admin/chals.html
+++ b/CTFd/templates/admin/chals.html
@@ -199,10 +199,9 @@
                 </div>
                 <div class="modal-body">
                     <div class="form-group">
-                        <label for="discovert-insert">Value</label>
-                        <input max-length="80" type="text" class="form-control discovery-insert" name="discovery-insert" placeholder="Type a problem to be solved and press Enter">
-                        <br/>
-                        <a href="#" id="create-discovery" class="btn btn-primary" style="margin-bottom:15px;">New Discovery</a>                      
+                        <a href="#" id="create-discovery" class="btn btn-primary" style="margin-bottom:15px;">New Discovery</a>
+                        <p> At least one dropdown menu will need ALL selected challenges in it to be solved before this challenge.</p>
+                        
                     </div>
                 </div>
                     
