--- a/CTFd/static/admin/css/style.css
+++ b/CTFd/static/admin/css/style.css
@@ -482,46 +482,59 @@ table{
 
 /* For Discovery */
 
-.dis {
-  width: 8em;
-  line-height: 2em;
-  width: 10%;
-  display:inline-block !important;
+.chal-discovery{
+    margin-left: 0.5%;
 }
 
-li.dis {
-  display: list-item;
-  width: 100%;
-  height: 2em;
-  border: 1px solid #ccc;
-  border-top-width: 0;
-  background-color: rgba(158, 110, 110, 0.6);
-  text-align: center;
+.disc0{
+    margin-left: 1% !important;
 }
 
-li.unselected {
-  display: none;
-  background-color: #fff;
+.current-discovery{
+    margin-left: 1% !important;
+    display: inline-block;
 }
 
-ul.dis:hover li.unselected {
-  background-color: rgba(255, 200, 200, 0.1);
-}
+/* .dis { */
+  /* width: 8em; */
+  /* line-height: 2em; */
+  /* width: 10%; */
+  /* display:inline-block !important; */
+/* } */
 
-ul.dis:hover li.dis,
-ul.dis:hover li.unselected {
-  display: list-item;
-}
+/* li.dis { */
+  /* display: list-item; */
+  /* width: 100%; */
+  /* height: 2em; */
+  /* border: 1px solid #ccc; */
+  /* border-top-width: 0; */
+  /* background-color: rgba(158, 110, 110, 0.6); */
+  /* text-align: center; */
+/* } */
 
-ul.dis:hover li.dis {
-  background-color: rgba(158, 110, 110, 0.6);
-}
+/* li.unselected { */
+  /* display: none; */
+  /* background-color: #fff; */
+/* } */
 
-ul.dis li:hover,
-ul.dis li.unselected:hover {
-  background-color: rgba(100, 0, 0, 0.2);
-  border-color: rgba(135, 204, 138, 0.8);
-  border-radius: 5px;
-  border-width: 1px;
-}
+/* ul.dis:hover li.unselected { */
+  /* background-color: rgba(255, 200, 200, 0.1); */
+/* } */
+
+/* ul.dis:hover li.dis, */
+/* ul.dis:hover li.unselected { */
+  /* display: list-item; */
+/* } */
+
+/* ul.dis:hover li.dis { */
+  /* background-color: rgba(158, 110, 110, 0.6); */
+/* } */
+
+/* ul.dis li:hover, */
+/* ul.dis li.unselected:hover { */
+  /* background-color: rgba(100, 0, 0, 0.2); */
+  /* border-color: rgba(135, 204, 138, 0.8); */
+  /* border-radius: 5px; */
+  /* border-width: 1px; */
+/* } */
 
