Fixed small error in Admin's GUI (Ints are important)

--- a/CTFd/static/admin/css/style.css
+++ b/CTFd/static/admin/css/style.css
@@ -492,7 +492,7 @@ table{
 
 .current-discovery{
     margin-left: 1% !important;
-    display: inline-block;
+    display: inline-block !important;
 }
 
 /* .dis { */
