Added Terms of Service and updated Favicon

--- a/CTFd/templates/TAMUctf/base.html
+++ b/CTFd/templates/TAMUctf/base.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="{{ request.script_root }}/static/{{ ctf_theme() }}/img/favicon.ico" type="image/icon">
     <link rel="icon" href="{{ request.script_root }}/static/{{ ctf_theme() }}/img/favicon.ico" type="image/x-icon">
-	<link rel="shortcut icon" href="{{ request.script_root }}/static/{{ ctf_theme() }}/img/favicon.png" type="image/x-icon" />
+    <link rel="icon" type="image/png" href="{{ request.script_root }}/static/{{ ctf_theme() }}/img/favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="{{ request.script_root }}/static/{{ ctf_theme() }}/img/favicon-16x16.png" sizes="16x16" />
     <link rel="stylesheet" href="{{ request.script_root }}/static/{{ ctf_theme() }}/css/vendor/bootstrap.min.css">
     <link rel="stylesheet" href="{{ request.script_root }}/static/{{ ctf_theme() }}/css/vendor/font-awesome/css/font-awesome.min.css" />
     <link href='{{ request.script_root }}/static/{{ ctf_theme() }}/css/vendor/OpenSans.css' rel='stylesheet' type='text/css'>
