--- a/CTFd/templates/TAMUctf/register.html
+++ b/CTFd/templates/TAMUctf/register.html
@@ -56,11 +56,28 @@
                 <div class="row">
                     <div class="col-md-12">
                         <span class="input">
-                        <input class="input-field" type="text" name="email" id="input-10" />
-                        <label class="input-label" for="input-10">
+                        <input class="input-field" type="text" name="email" id="input-10" placeholder="If you are a student, use Texas A&M Account." />
+                        <label class="input-label" for="input-10" >
                             <span class="label-content" data-content="Email">Email</span>
                         </label>
                     </span>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <span class="input">
+                            <select id="dropdown-field" name="classification" id="input-10">
+                                <option selected disabled hidden style='display: none'></option>
+                                <option value="not">Not Student</option>
+                                <option value="u1">U1</option>
+                                <option value="u2">U2</option>
+                                <option value="u3">U3</option>
+                                <option value="u4u5">U4/U5</option>
+                            </select>
+                            <label class="input-label" for="input-10" >
+                                <span class="label-content" data-content="Classification">Classification</span>
+                            </label>
+                        </span>
                     </div>
                 </div>
                 <div class="row">
@@ -93,8 +110,8 @@
 {% block scripts %}
 <script src="{{ request.script_root }}/static/{{ ctf_theme() }}/js/style.js"></script>
 <script>
-	if (window.location.hash == "#frame"){
-		$('.top-bar').hide()
-	}
+    if (window.location.hash == "#frame"){
+        $('.top-bar').hide()
+    }
 </script>
 {% endblock %}
