Added a reCaptcha to register.html and base.html

--- a/CTFd/templates/TAMUctf/base.html
+++ b/CTFd/templates/TAMUctf/base.html
@@ -30,7 +30,9 @@
        font-size: 18px;
     }
     </style>
+  <script src='https://www.google.com/recaptcha/api.js'></script>
 </head>
+
 <body>
   <div class="body-container">
     <div class="navbar navbar-inverse home">
