--- a/CTFd/templates/TAMUctf/register.html
+++ b/CTFd/templates/TAMUctf/register.html
@@ -96,6 +96,7 @@
                     </div>
                 </div>
                 <input type="hidden" name="nonce" value="{{ nonce }}">
+                <div class="g-recaptcha" data-sitekey="6Ld4ORwUAAAAAJiStwc-KVivm-1K0rstRHJF9ppZ"></div>
             </form>
         </div>
     </div>
