--- a/CTFd/templates/original/register.html
+++ b/CTFd/templates/original/register.html
@@ -4,6 +4,29 @@
 {% endblock %}
 
 {% block content %}
+<style>
+.alert {
+    padding: 20px;
+    background-color: #c80000;
+    color: white;
+}
+
+.closebtn {
+    margin-left: 15px;
+    color: white;
+    font-weight: bold;
+    float: right;
+    font-size: 22px;
+    line-height: 20px;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.closebtn:hover {
+    color: black;
+}
+</style>
+
 <div class="jumbotron home">
     <div class="container">
         <h1>Register</h1>
@@ -33,11 +56,28 @@
                 <div class="row">
                     <div class="col-md-12">
                         <span class="input">
-                        <input class="input-field" type="text" name="email" id="input-10" />
-                        <label class="input-label" for="input-10">
+                        <input class="input-field" type="text" name="email" id="input-10" placeholder="If you are a student, use Texas A&M Account." />
+                        <label class="input-label" for="input-10" >
                             <span class="label-content" data-content="Email">Email</span>
                         </label>
                     </span>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <span class="input">
+                            <select id="dropdown-field" name="classification" id="input-10">
+                                <option selected disabled hidden style='display: none'></option>
+                                <option value="not">Not Student</option>
+                                <option value="u1">U1</option>
+                                <option value="u2">U2</option>
+                                <option value="u3">U3</option>
+                                <option value="u4u5">U4/U5</option>
+                            </select>
+                            <label class="input-label" for="input-10" >
+                                <span class="label-content" data-content="Classification">Classification</span>
+                            </label>
+                        </span>
                     </div>
                 </div>
                 <div class="row">
@@ -56,17 +96,23 @@
                     </div>
                 </div>
                 <input type="hidden" name="nonce" value="{{ nonce }}">
+                <div class="g-recaptcha" data-sitekey="6Ld4ORwUAAAAAJiStwc-KVivm-1K0rstRHJF9ppZ"></div>
             </form>
         </div>
     </div>
+    <div class="alert" style="margin-top: 20px;">
+      <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span> 
+      <strong>By registering, you agree to our <a href="https://tamuctf.github.io/tos.html" target="_blank" style="color: #87CC8A;">Terms of Service</a></strong>
+    </div>
 </div>
+
 {% endblock %}
 
 {% block scripts %}
 <script src="{{ request.script_root }}/static/{{ ctf_theme() }}/js/style.js"></script>
 <script>
-	if (window.location.hash == "#frame"){
-		$('.top-bar').hide()
-	}
+    if (window.location.hash == "#frame"){
+        $('.top-bar').hide()
+    }
 </script>
 {% endblock %}
