--- a/CTFd/templates/original/register.html
+++ b/CTFd/templates/original/register.html
@@ -99,7 +99,7 @@
 	                    <!-- Google reCAPTCHA widget -->
 		            	<div class="g-recaptcha" data-sitekey="6Ld4ORwUAAAAAJiStwc-KVivm-1K0rstRHJF9ppZ"></div>
                     	<!-- Submit Button -->
-                    	<button type="submit" id="submit" tabindex="5" class="btn btn-md btn-theme btn-outlined pull-left">Submit</button>
+                    	<button type="submit" id="submit" tabindex="5" class="btn btn-md btn-theme btn-outlined pull-right">Submit</button>
                     </div>
                 </div>
 
