fixing widget location

--- a/CTFd/static/admin/css/style.css
+++ b/CTFd/static/admin/css/style.css
@@ -365,6 +365,13 @@ table{
     left: -15px
 }
 
+/* saf3+, chrome1+ */
+@media screen and (-webkit-min-device-pixel-ratio:0) {
+    body .gform_wrapper .left_label #recaptcha_widget_div,
+    body .gform_wrapper .right_label #recaptcha_widget_div {margin-left:32%;}
+}
+
+
 #submit {
     position: relative;
     right: -15px;
