fixing widget location

--- a/CTFd/templates/original/register.html
+++ b/CTFd/templates/original/register.html
@@ -95,7 +95,8 @@
                 </div>
                 
                 <div class="done-row row">
-                    <div class="col-md-6 col-md-offset-6" style="margin-top:10px">
+                <!--  col-md-offset-6 -->
+                    <div class="col-md-6" style="margin-top:10px">
 	                    <!-- Google reCAPTCHA widget -->
 		            	<div class="g-recaptcha" data-sitekey="6Ld4ORwUAAAAAJiStwc-KVivm-1K0rstRHJF9ppZ"></div>
                     	<!-- Submit Button -->
