--- a/CTFd/templates/original/register.html
+++ b/CTFd/templates/original/register.html
@@ -95,11 +95,12 @@
                 </div>
                 
                 <div class="done-row row">
-                <!--  col-md-offset-6 -->
                     <div class="col-md-6" style="margin-top:10px">
 	                    <!-- Google reCAPTCHA widget -->
 		            	<div class="g-recaptcha" data-sitekey="6Ld4ORwUAAAAAJiStwc-KVivm-1K0rstRHJF9ppZ"></div>
                     	<!-- Submit Button -->
+                   	</div>
+                    <div class="col-md-6" style="margin-top:10px">
                     	<button type="submit" id="submit" tabindex="5" class="btn btn-md btn-theme btn-outlined pull-right">Submit</button>
                     </div>
                 </div>
