--- a/CTFd/templates/original/register.html
+++ b/CTFd/templates/original/register.html
@@ -97,10 +97,10 @@
                 <div class="done-row row">
                     <div class="col-md-6" style="margin-top:10px">
 	                    <!-- Google reCAPTCHA widget -->
-		            	<div class="g-recaptcha" data-sitekey="6Ld4ORwUAAAAAJiStwc-KVivm-1K0rstRHJF9ppZ"></div>
-                    	<!-- Submit Button -->
+		            	<div class="g-recaptcha pull-left" data-sitekey="6Ld4ORwUAAAAAJiStwc-KVivm-1K0rstRHJF9ppZ"></div>
                    	</div>
                     <div class="col-md-6" style="margin-top:10px">
+                    	<!-- Submit Button -->
                     	<button type="submit" id="submit" tabindex="5" class="btn btn-md btn-theme btn-outlined pull-right">Submit</button>
                     </div>
                 </div>
